--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,5 +6,26 @@
 .col {
     align-content: center;
     justify-content: center;
-    text-align: center;
+}
+
+#header {
+    margin-top: 25px;
+}
+
+#card {
+    margin-top: 50px;
+    height: 50vh;
+    background-color: lightblue;
+}
+
+#question {
+    font-size: 30px;
+    font-weight: bold;
+}
+
+.row .qItem {
+    font-size: 20px;
+    line-height: 1.5;
+    font-weight: bold;
+    justify-content: left;
 }
