--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,7 @@
+body {
+    background-image: url('../images/cartographer.png');
+}
+
 .row {
     align-content: center;
     justify-content: center;
@@ -10,6 +14,10 @@
 
 #header {
     margin-top: 25px;
+}
+
+h1, h3 {
+    color: wheat;
 }
 
 #card {
@@ -25,7 +33,8 @@
 
 .row .qItem {
     font-size: 20px;
-    line-height: 1.5;
+    line-height: 2;
     font-weight: bold;
     justify-content: left;
+    margin-left: 20px;
 }
