--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,7 @@ body {
 .row {
     align-content: center;
     justify-content: center;
+    text-align: center;
 }
 
 .col {
@@ -20,10 +21,20 @@ h1, h3 {
     color: wheat;
 }
 
+h2 {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+button {
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
 #card {
     margin-top: 50px;
     height: 50vh;
-    background-color: lightblue;
+    background-color: rgb(158, 158, 158);
 }
 
 #question {
@@ -37,4 +48,8 @@ h1, h3 {
     font-weight: bold;
     justify-content: left;
     margin-left: 20px;
+}
+
+#footer {
+    margin-top: 30px;
 }
