added border to .selected class to indicate visually which answer is currently selected

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,8 +48,15 @@ button {
     font-weight: bold;
     justify-content: left;
     margin-left: 20px;
+    margin-right: 20px;
 }
 
 #footer {
     margin-top: 30px;
+}
+
+.selected {
+    border-style: solid;
+    border-color: black;
+    border-width: 3px;
 }
